--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Delani Studio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="logo" href="images/logo/logo.png">
     <link rel="stylesheet" href="css0/styles.css">
   </head>
   <body>
