add first background image with centered text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-
+    <div class="himg">
+          <div class="container">
+            <br>
+            <div class="logocenter">
+              <img id="logocenter" src="images/logo/logo.png">
+              <br>
+              <h1>WELCOME</h1>
+              <br>
+              <h1>TO DELANI STUDIO</h1>
+              <br>
+              <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+              <br>
+              <img id="logoc" src="images/mouse_click.png">
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <br>
+        <br>
   </body>
 </html>
