add about us section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
         </div>
         <br>
         <br>
+        
+        <div class="aboutus">
+    <h4><strong>ABOUT US</strong></h4>
+    <p>When you work with us,you are part of a team of committed collacorators. All aspects of our software development process are integrated,interactive and agile.</p>
+    <p>Our approach unifies design,development and product management to create exceptional products.</p>
+    <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
+    <p>Then we help translate them into effective and elegant solutions.</p>
+  </div>
+
+
+
   </body>
 </html>
