add services section with background photo and text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <br>
-        
+
         <div class="aboutus">
     <h4><strong>ABOUT US</strong></h4>
     <p>When you work with us,you are part of a team of committed collacorators. All aspects of our software development process are integrated,interactive and agile.</p>
@@ -37,6 +37,16 @@
     <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
     <p>Then we help translate them into effective and elegant solutions.</p>
   </div>
+
+  <div class="simg">
+      <br>
+      <br>
+      <h4><strong>SERVICES</strong></h4>
+      <p>Before we can sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</p>
+      <p>The outcome of the scoping session is proposal of high-level statement of work.</p>
+      <p>based on your requirements,we can provide a complete offering or just the pieces you need.</p>
+    </div>
+
 
 
 
