add what we do section with Design section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
     </div>
 
 
+    <h4><strong>WHAT WE DO</strong></h4>
+    <br>
+      <div class="wwd">
+        <div class= row>
+          <div class= col-md-4>
+            <div class="designhidden">
+              <div class="product">
+                <img id="hovers1" src="images/services_icons/design_icon.png">
+                <p>DESIGN</p>
+              </div>
+            </div>
+            <div class="designshowing">
+              <p><strong>DESIGN</strong></p>
+              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing</p>
+              <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+            </div>
+          </div>
+
+
 
 
   </body>
