complete what we do section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="devhidden">
+              <div class="product">
+                <img id="hovers2" src="images/services_icons/dev_icon.png">
+                <p>DEVELOPMENT</p>
+              </div>
+            </div>
+            <div class="devshowing">
+              <p><strong>DEVELOPMENT</strong></p>
+              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="producthidden">
+              <div class="product">
+                <img id="hovers3" src="images/services_icons/product_icon.png">
+                <p>PRODUCT MANAGEMENT</p>
+              </div>
+            </div>
+            <div class="productshowing">
+              <p><strong>PRODUCT MANAGEMENT</strong></p>
+              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.</p>
+              <p>This iterative process allows for change as business requirements evolve.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 
 
