add portfolio section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
         </div>
       </div>
 
+      <div class="portfolio">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="img1">
+            <img src="images/portfolio/work4.jpg" height="120" width="170">
+          </div>
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work3.jpg" height="120" width="170">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work2.jpg" height="120" width="170">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work1.jpg" height="120" width="170">
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3">
+          <img src="images/portfolio/work5.jpg" height="120" width="170">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work6.jpg" height="120" width="170">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work7.jpg" height="120" width="170">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work8.jpg" height="120" width="170" >
+        </div>
+      </div>
+    </div>
+
+
 
 
 
