add contact us section with background image

--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@
       </div>
     </div>
 
+    <div class="contact">
+          <h4>CONTACT US</h4>
+          <br>
+            <form action="">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" placeholder="Your name..">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="Enter your Email address..">
+              <br>
+              <br>
+              <textarea id="subject" name="subject" placeholder="Your message here.." height="700px" width="800px" ></textarea>
+              <br>
+              <input type="submit" value="Submit">
+            </form>
+          </div>
+        </div>
 
 
 
