--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Delani Studio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="logo" href="images/logo/logo.png">
+    <link rel="logo" href="../images/logo/logo.png">
     <link rel="stylesheet" href="css0/styles.css">
     <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
@@ -157,7 +157,24 @@
               <input type="submit" value="Submit">
             </form>
           </div>
-        
+          <div class="social">
+            <div class="row">
+              <div class="col-md-4">
+              </div>
+              <img src="images/social_icons/behance.png">
+              <img src="images/social_icons/dribble.png">
+              <img src="images/social_icons/facebook.png">
+              <img src="images/social_icons/flickr.png">
+              <img src="images/social_icons/g_plus.png">
+              <img src="images/social_icons/pinterest.png">
+              <img src="images/social_icons/skype.png">
+              <img src="images/social_icons/stumble_upon.png">
+              <img src="images/social_icons/twitter.png">
+              <img src="images/social_icons/you_tube.png">
+            </div>
+            <p>Delani Studio</p>
+            <p>2019</p>
+          </div>
 
 
 
