made the text input in contact us transparent

--- a/index.html
+++ b/index.html
@@ -13,33 +13,28 @@
   </head>
   <body>
     <div class="himg">
-
-            <br>
-            <br>
-            <div class="logocenter">
-              <img id="logocenter" src="images/logo/logo.png">
-              <br>
-              <h1>WELCOME</h1>
-              <br>
-              <h1>TO DELANI STUDIO</h1>
-              <br>
-              <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
-              <br>
-              <img id="logoc" src="images/mouse_click.png">
-              <p></p>
-
-          </div>
-        </div>
-
-
+      <br>
+      <br>
+      <div class="logocenter">
+        <img id="logocenter" src="images/logo/logo.png">
         <br>
+        <h1>WELCOME</h1>
         <br>
-
-        <div class="aboutus">
-    <h4><strong>ABOUT US</strong></h4>
-    <p>When you work with us,you are part of a team of committed collacorators. All aspects of our software development process are integrated,interactive and agile.</p>
-    <p>Our approach unifies design,development and product management to create exceptional products.</p>
-    <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
+        <h1>TO DELANI STUDIO</h1>
+        <br>
+        <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+        <br>
+        <img id="logoc" src="images/mouse_click.png">
+        <p></p>
+      </div>
+    </div>
+      <br>
+      <br>
+      <div class="aboutus">
+        <h4><strong>ABOUT US</strong></h4>
+        <p>When you work with us,you are part of a team of committed collacorators. All aspects of our software development process are integrated,interactive and agile.</p>
+        <p>Our approach unifies design,development and product management to create exceptional products.</p>
+        <p>We start each project by understanding your business goals,the user's needs and the product requirements</p>
     <p>Then we help translate them into effective and elegant solutions.</p>
   </div>
 
@@ -145,7 +140,7 @@
     <div class="contact">
           <h4>CONTACT US</h4>
           <br>
-            <form action="">
+            <form action="" class="contact-us">
               <label for="name">Name</label>
               <input type="text" id="name" name="name" placeholder="Your name..">
               <label for="email">Email</label>
