added an alert when message is submitted

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <br>
               <textarea id="subject" name="subject" placeholder="Your message here.." height="700px" width="800px" ></textarea>
               <br>
-              <input type="submit" value="Submit">
+              <button type="button" id="submit">SUBMIT</button>
             </form>
           </div>
           <div class="social">
