add links on social icons

--- a/index.html
+++ b/index.html
@@ -156,23 +156,20 @@
             <div class="row">
               <div class="col-md-4">
               </div>
-              <img src="images/social_icons/behance.png">
-              <img src="images/social_icons/dribble.png">
-              <img src="images/social_icons/facebook.png">
-              <img src="images/social_icons/flickr.png">
-              <img src="images/social_icons/g_plus.png">
-              <img src="images/social_icons/pinterest.png">
-              <img src="images/social_icons/skype.png">
-              <img src="images/social_icons/stumble_upon.png">
-              <img src="images/social_icons/twitter.png">
-              <img src="images/social_icons/you_tube.png">
+              <a href="https://www.behance.net/"><img src="images/social_icons/behance.png"></a>
+              <a href="https://dribbble.com/"><img src="images/social_icons/dribble.png"></a>
+              <a href="https://www.facebook.com/"><img src="images/social_icons/facebook.png"></a>
+              <a href="https://support.google.com/plus/answer/6320391?co=GENIE.Platform%3DDesktop&hl=en"><img src="images/social_icons/flickr.png"></a>
+              <a href="https://www.flickr.com/"><img src="images/social_icons/g_plus.png"></a>
+              <a href="https://www.pinterest.com/"><img src="images/social_icons/pinterest.png"></a>
+              <a href="https://www.skype.com/en/"><img src="images/social_icons/skype.png"></a>
+              <a href="https://www.stumbleupon.com/"><img src="images/social_icons/stumble_upon.png"></a>
+              <a href="https://twitter.com/"><img src="images/social_icons/twitter.png"></a>
+              <a href="https://www.youtube.com/"><img src="images/social_icons/you_tube.png"></a>
             </div>
             <p>Delani Studio</p>
             <p>2019</p>
           </div>
-
-
-
 
   </body>
 </html>
